menu visibility bugfixes, cal js fixes

--- a/styles/blocks/blk/upcoming.less
+++ b/styles/blocks/blk/upcoming.less
@@ -21,5 +21,12 @@
         font-size: 16px;
       }
     }
+
+    @media (max-width: @sm_to) {
+      .blk-upcoming__btn {
+        font-size: 10px;
+        line-height: 22px;
+      }
+    }
   }
 }
